[gd_scene load_steps=31 format=3 uid="uid://c0br65xw5ls7u"]

[ext_resource type="Script" path="res://Scenes/Characters/Autumn/AIAutumn.gd" id="1_vo3u4"]
[ext_resource type="Resource" uid="uid://b4c527txu6lh0" path="res://Scenes/Characters/Autumn/AIAutumnStats.tres" id="2_6jf6g"]
[ext_resource type="Texture2D" uid="uid://08ywwfq0uehq" path="res://Scenes/Characters/Autumn/SpriteSheet3 (Primary).png" id="2_k7xpo"]
[ext_resource type="AnimationLibrary" uid="uid://c1s5fae33vol4" path="res://Scenes/Characters/Autumn/Animations/Idle.res" id="3_mxjrn"]
[ext_resource type="AnimationLibrary" uid="uid://y15vhtqlrevx" path="res://Scenes/Characters/Autumn/Animations/VoidBolt.res" id="4_o4pgb"]
[ext_resource type="PackedScene" uid="uid://cqtu20alqlysd" path="res://Scenes/UI/Inventory/inventory.tscn" id="5_4kese"]
[ext_resource type="AnimationLibrary" uid="uid://cskxjhctjvgeo" path="res://Scenes/Characters/Autumn/Animations/Walk.res" id="5_yix8o"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://c3cti7rr55kx8" path="res://Scenes/Characters/Autumn/Animations/AnimeTree.tres" id="6_doiin"]
[ext_resource type="Script" path="res://Scenes/UI/StatBars/healthbar.gd" id="9_exqhc"]
[ext_resource type="Script" path="res://Scenes/UI/StatBars/staminabar.gd" id="10_w2a7e"]
[ext_resource type="Script" path="res://Scenes/UI/StatBars/manabar.gd" id="11_xpsxw"]
[ext_resource type="Script" path="res://Scenes/UI/StatBars/expbar.gd" id="12_7wrum"]
[ext_resource type="Script" path="res://BehaviorTree/Base/BTreeBase.gd" id="14_xh21e"]
[ext_resource type="Script" path="res://BehaviorTree/Composite/CompositeTree.gd" id="15_b2f4s"]
[ext_resource type="Script" path="res://Scenes/Characters/Autumn/FindSlimes.gd" id="16_0wuve"]
[ext_resource type="Script" path="res://BehaviorTree/Actions/GoToLocation.gd" id="17_o56ku"]
[ext_resource type="Script" path="res://Scenes/Characters/Autumn/Attackenemy.gd" id="18_04xn1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1cxy"]
size = Vector2(8.33332, 5.55556)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5uga1"]
radius = 21.1111
height = 42.2222

[sub_resource type="Animation" id="Animation_bpuxi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [85]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyx7m"]
_data = {
"RESET": SubResource("Animation_bpuxi")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x62gx"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.337255, 0, 0.337255, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmn32"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dkunt"]
bg_color = Color(0.862745, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qi84f"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3cd2"]
bg_color = Color(0, 0.4, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbsm4"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2478d"]
bg_color = Color(0, 0, 0.654902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sr4pf"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0.619608, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o7xf8"]
bg_color = Color(0.47451, 0, 0.552941, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="AIAutumn" type="CharacterBody2D" node_paths=PackedStringArray("NavAgent") groups=["Adventurer", "Autumn", "player"]]
y_sort_enabled = true
scale = Vector2(0.9, 0.9)
collision_mask = 9
input_pickable = true
safe_margin = 20.0
script = ExtResource("1_vo3u4")
NavAgent = NodePath("NavigationAgent2D")
stats = ExtResource("2_6jf6g")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_k7xpo")
hframes = 14
vframes = 13
frame = 85

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.11111, 11.1111)
shape = SubResource("RectangleShape2D_s1cxy")

[node name="Areas" type="Node2D" parent="." groups=["AutumnAreas"]]

[node name="InteractBox" type="Area2D" parent="Areas" groups=["Autumn"]]
collision_layer = 516
collision_mask = 516

[node name="CollisionShape2D" type="CollisionShape2D" parent="Areas/InteractBox"]
position = Vector2(-1.11111, 5.55556)
shape = SubResource("CapsuleShape2D_5uga1")

[node name="Animations" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_nyx7m"),
"Idle": ExtResource("3_mxjrn"),
"VoidBolt": ExtResource("4_o4pgb"),
"Walk": ExtResource("5_yix8o")
}

[node name="AnimationTree" type="AnimationTree" parent="Animations"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_nyx7m"),
"Idle": ExtResource("3_mxjrn"),
"VoidBolt": ExtResource("4_o4pgb"),
"Walk": ExtResource("5_yix8o")
}
tree_root = ExtResource("6_doiin")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/Idle = false
parameters/conditions/Reset = false
parameters/conditions/VoidBolt = false
parameters/conditions/Walking = false
parameters/Idle/blend_position = Vector2(0.0311999, 0.0238094)
parameters/VoidBolt/blend_position = Vector2(0, 0.150794)
parameters/Walking/blend_position = Vector2(-0.336, -0.495595)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 30.0
path_postprocessing = 1

[node name="Camera2D" type="Camera2D" parent="."]
enabled = false

[node name="Timers" type="Node" parent="."]

[node name="RegenerationTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="MoodTimer" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="CombatTimer" type="Timer" parent="Timers"]

[node name="Statbars" type="Panel" parent="."]
custom_minimum_size = Vector2(30, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -53.0
offset_right = 15.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x62gx")

[node name="VBoxContainer" type="VBoxContainer" parent="Statbars"]
layout_mode = 0
offset_left = 2.66667
offset_top = 7.33333
offset_right = 52.6667
offset_bottom = 59.3333
scale = Vector2(0.5, 0.5)

[node name="Healthbar" type="ProgressBar" parent="Statbars/VBoxContainer" node_paths=PackedStringArray("user")]
z_index = 2
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_dmn32")
theme_override_styles/fill = SubResource("StyleBoxFlat_dkunt")
value = 50.0
show_percentage = false
script = ExtResource("9_exqhc")
user = NodePath("../../..")

[node name="Staminabar" type="ProgressBar" parent="Statbars/VBoxContainer" node_paths=PackedStringArray("user")]
z_index = 2
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qi84f")
theme_override_styles/fill = SubResource("StyleBoxFlat_u3cd2")
value = 50.0
show_percentage = false
script = ExtResource("10_w2a7e")
user = NodePath("../../..")

[node name="Manabar" type="ProgressBar" parent="Statbars/VBoxContainer" node_paths=PackedStringArray("user")]
z_index = 2
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_tbsm4")
theme_override_styles/fill = SubResource("StyleBoxFlat_2478d")
value = 50.0
show_percentage = false
script = ExtResource("11_xpsxw")
user = NodePath("../../..")

[node name="expbar" type="ProgressBar" parent="Statbars/VBoxContainer" node_paths=PackedStringArray("user")]
custom_minimum_size = Vector2(50, 10)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/background = SubResource("StyleBoxFlat_sr4pf")
theme_override_styles/fill = SubResource("StyleBoxFlat_o7xf8")
value = 50.0
show_percentage = false
script = ExtResource("12_7wrum")
user = NodePath("../../..")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Inventory" parent="UI" node_paths=PackedStringArray("user") instance=ExtResource("5_4kese")]
process_mode = 3
visible = false
user = NodePath("../..")

[node name="BehaviorTreeBase" type="Node" parent="." node_paths=PackedStringArray("user")]
script = ExtResource("14_xh21e")
user = NodePath("..")

[node name="CompositeLeaf" type="Node" parent="BehaviorTreeBase" node_paths=PackedStringArray("user")]
script = ExtResource("15_b2f4s")
user = NodePath("../..")

[node name="FindSlimes" type="Node" parent="BehaviorTreeBase/CompositeLeaf" node_paths=PackedStringArray("user")]
script = ExtResource("16_0wuve")
user = NodePath("../../..")
time = 20.0

[node name="GoToLocationAction" type="Node" parent="BehaviorTreeBase/CompositeLeaf" node_paths=PackedStringArray("NavAgent", "user")]
script = ExtResource("17_o56ku")
NavAgent = NodePath("../../../NavigationAgent2D")
user = NodePath("../../..")

[node name="Attackenemy" type="Node" parent="BehaviorTreeBase/CompositeLeaf" node_paths=PackedStringArray("user")]
script = ExtResource("18_04xn1")
user = NodePath("../../..")
time = 3.0

[connection signal="mouse_entered" from="Areas/InteractBox" to="." method="MouseOn"]
[connection signal="mouse_exited" from="Areas/InteractBox" to="." method="MouseOff"]
[connection signal="timeout" from="Timers/RegenerationTimer" to="." method="RegenerationTimeout"]
[connection signal="timeout" from="Timers/MoodTimer" to="." method="ScannerTimeout"]
